--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="keywords" content="San Francisco 10, Alicante, guía turística, alojamiento, España, turismo, playas, restaurantes">
     <meta name="author" content="San Francisco 10">
     <meta name="robots" content="index, follow">
-    <link rel="icon" type="image/svg+xml" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>🏨</text></svg>">
+    <link rel="icon" type="image/x-icon" href="img/favicon_SF.ico">
     <title>San Francisco 10 - Guía de Alicante</title>
     <style>
         * {
@@ -146,4 +146,5 @@
     </div>
 </body>
 </html>
+
 
